samples/_failures_safe/1761402001_048a18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f0c5ad9.c: In function ‘main’:
./samples/SAFE/__tmp_0f0c5ad9.c:172:5: error: expected expression at end of input
  172 |     } while (
      |     ^
./samples/SAFE/__tmp_0f0c5ad9.c:172:5: error: expected declaration or statement at end of input
